# butenhof

./: CMakeLists.txt  README.md
notes/: README.md
notes/src/bank/: CMakeLists.txt  main.c
notes/src/hello/: main.c
notes/src/pipeline/: main.c  queue.c  queue.h
notes/src/warehouse/: CMakeLists.txt
src/barrier/: CMakeLists.txt  main.c
src/cancel/: CMakeLists.txt  main.c
src/hello/: CMakeLists.txt
src/pipeline/: CMakeLists.txt
src/rwlock/: CMakeLists.txt  main.c  rwlock.c  rwlock.h
src/spmd/: CMakeLists.txt  main.c
src/warehouse/: main.c  stack.c  stack.h
